--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -10,7 +10,7 @@ html {
 
 h1 {
   padding: .77rem 0;
-  background-color: #252525;
+  background-color: #0b0b0b;
   text-align: center;
   font-family: 'Poppins', sans-serif;
   font-size: 1.88rem;
